manifests/service-sph.yaml
apiVersion: v1
kind: Service
metadata:
  name: sph-service
  namespace: sph
spec:
  selector:
    app: sph
  ports:
    - protocol: TCP
      name: http
      port: 80        # Internal service port
      targetPort: 5000 # Flask app port
      nodePort: 30080  # External NodePort
  type: NodePort
